--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@kycdao/kycdao-sdk": "^0.1.1"
   }
 }
